# agentic-ai-landing-zone

./: .gitignore  README.md
client/ai_ops/: README.md  requirements.txt
client/ai_ops/config/: sample_.env
client/ai_ops/src/agents/: README.md  db_operator.py  db_operator_core.py
client/ai_ops/src/apps/: db_operator_ui.py
client/ai_ops/src/common/: config.py
client/ai_ops/src/llm/: oci_ds_md.py  oci_embedding_model.py  oci_genai.py  oci_genai_agent.py
client/ai_ops/src/tools/: python_scratchpad.py
client/ai_ops/src/utils/: mcp_helper_connection.py  oci_auth_proxy.py
client/ask_data/: Dockerfile  README.md  langgraph.json  requirements.txt
client/ask_data/config/: .env_sample
client/ask_data/src/agent_teams/: askdata_getinsights.py
client/ask_data/src/agents/: agent_redis_ssehttp.py
client/ask_data/src/apps/: fastapi_getinsights.py  openapi_getinsights.py  ui_getinsight.py
client/open_ai_agents/: README.md  pyproject.toml  requirements.txt
client/orderx-hub/: requirements.txt
client/orderx-hub/config/: .env
client/orderx-hub/images/: test.html
mcp_server/dbtools-mcp-server/: Dockerfile  README.md
mcp_server/dbtools-mcp-server/src/: main.py
mcp_server/mcp_redis/: Dockerfile  Dockerfile_bkp  README.md  inference.py  ocir_ops.sh  ocir_pull_run.sh  ocir_push.sh  pyproject.toml  requirements.txt
mcp_server/mcp_redis/config/: sample.env
mcp_server/mcp_redis/src/: main.py
mcp_server/mcp_redis/src/common/: config.py  connection.py  server.py
mcp_server/mcp_redis/src/tools/: dataframe.py  hash.py  string.py
(+22 files in other folders)
