[project]
name = "redis-mcp-server"
version = "0.2.0-alpha"
description = "Redis MCP Server, by Redis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.11,<1.12",
    "fastmcp>=2.5,<2.6",
    "redis>=5.2.1",
    "python-dotenv>=1.0.1",
    "numpy>=2.2.4",
    "pandas",
    "uvicorn>=0.30.0",
    "anyio>=4.4.0,<5",
    "httpx>=0.27.0"
]